Bug 60703 - MSDraw import: certain properties of shapes not handled correctly, leading to e.g. loss of frame borders
Summary: MSDraw import: certain properties of shapes not handled correctly, leading to...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords: regression
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2013-02-11 22:54 UTC by Michael Stahl
Modified: 2013-02-12 08:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Stahl 2013-02-11 22:54:13 UTC
this bug has some common symptoms with bug 46563 but is different;
it can be reproduced with the attachment on that bug (but not
with the steps in many of its duplicates).

likely this problem affects more attributes than just borders.

it is a regression from some SvxMSDffManager refactoring in impress212
that was recently merged in.
Comment 1 Michael Stahl 2013-02-11 23:15:37 UTC
fixed on master
Comment 2 Not Assigned 2013-02-11 23:17:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=658c35878c14044029ca7f708fbde32b98cb226a

fdo#60703: MSDraw filter: fix import of flags



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Not Assigned 2013-02-12 08:32:49 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ca739d7b9acbc2fc9eff401ca850027f6e52b66&h=libreoffice-4-0

fdo#60703: MSDraw filter: fix import of flags


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.