fdo#60703: MSDraw filter: fix import of flags

DffPropSet::IsHardAttribute needs to handle flag properties specially
(regression from 44cfc7cb6533d827fd2d6e586d92c61d7d7f7a70)

Change-Id: If5c6b9cfac58a787527cd132f7fc80d392b8e677
(cherry picked from commit 658c35878c14044029ca7f708fbde32b98cb226a)
Reviewed-on: https://gerrit.libreoffice.org/2114
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>